# CoonSpect

./: .env  Dockerfile  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  start.sh
backend-new/: .gitignore  Dockerfile  pyproject.toml  start.sh
backend-new/alembic/: env.py
backend-new/alembic/versions/: 0d8c8a122f0b_create_tables.py  ed58283348f2_init.py
backend-new/src/: main.py  settings.py
backend-new/src/api/routers/: auth.py  lecture.py  task.py  user.py
backend-new/src/app/: main.py  settings.py
backend-new/src/app/crud/: lecture.py  user.py
backend-new/src/app/infra/: redis.py  s3.py
backend-new/src/app/services/: auth.py  security.py  websocket.py
backend-new/src/crud/: lecture.py  user.py
backend-new/src/infra/: http_client.py  redis.py  s3.py  taskiq.py
backend-new/src/models/: token.py
backend-new/src/services/: auth.py  lecture.py  llm.py  password.py  s3.py  stt.py  task.py  token.py  websocket.py
backend-new/src/tasks/: status.py  tasks.py  tasks_mock.py
backend-new/tests/: conftest.py  test_main.py
backend-new/tests/crud/: test_user.py
backend-new/tests/crud.py/: test_lecture_crud.py  test_user_crud.py
backend-new/tests/services/: test_auth.py  test_lecture.py  test_password.py  test_token.py  test_websocket.py
backend/alembic/: env.py
backend/alembic/versions/: 0d8c8a122f0b_create_tables.py  2a50fca5cbfc_init.py  355b27bbaeea_actualize_db.py  504ebac31133_add_celery_things.py  5b5ee37205ee_init.py  6424f84ff021_nonnull_time.py  70a9695ba8ec_init_alembic.py  d3e8ec4a4863_init_clean_schema.py  ed58283348f2_init.py
backend/examples/: description.json
backend/src/: celery_app.py  celery_test.py  config.py  main.py  settings.py  todo.txt  wsmanager.py
backend/src/api/routers/: auth.py  (+6 more)
backend/src/app/: celery_app.py  config.py  main.py  security.py  settings.py  wsmanager.py
backend/src/celery_tasks/: stt.py
backend/src/common/: sorting.py
backend/src/crud/: base.py  lecture.py  user.py
backend/src/db/: base.py  session.py
backend/src/infra/: http_client.py  redis.py  s3.py  taskiq.py
backend/src/models/: token.py
backend/src/schemas/: lecture.py  user.py
backend/src/services/: auth.py  lecture.py  llm.py  password.py  s3.py  search.py  stt.py  task.py  token.py  websocket.py
backend/src/tasks/: status.py  tasks.py  tasks_mock.py
backend/test/: example.txt  run.py
backend/tests/: conftest.py  test_main.py
backend/tests/crud/: test_lecture.py  test_user.py
backend/tests/services/: test_auth.py  test_lecture.py  test_llm.py  test_password.py  test_s3.py  test_stt.py  test_task.py  test_token.py  test_websocket.py
backend/tests/tasks/: test_tasks.py
(+145 files in other folders)
