[project]
name = "backend-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "aioredis>=2.0.1",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.135.1",
    "loguru>=0.7.3",
    "pyjwt>=2.12.1",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
    "types-aiobotocore-s3>=3.3.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.6",
]

[tool.pyright]
typeCheckingMode = "standart"
