[project]
name = "backend-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "aioredis>=2.0.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.0",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.12.1",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "taskiq-fastapi>=0.5.0",
    "taskiq-redis>=1.2.2",
    "types-aiobotocore-s3>=3.4.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "fakeredis>=2.35.1",
    "mock-alchemy>=0.2.6",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-env>=1.6.0",
    "pytest-mock>=3.15.1",
    "respx>=0.23.1",
    "ruff>=0.15.11",
]

[tool.pyright]
typeCheckingMode = "standart"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
env = [
    "ENVIRONMENT=pytest",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["B008"]